# beacon

./: .gitignore  README.md  pyproject.toml
beacon/: __init__.py  cli.py  models.py  poller.py  store.py
beacon/sources/: __init__.py  base.py  github.py
tests/: test_github_source.py  test_poller.py  test_store.py
