[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon"
version = "0.0.1"
description = "A standalone, agent-agnostic change feed that briefs agents on what changed in the systems they operate on."
readme = "README.md"
requires-python = ">=3.10"
# stdlib-only by design (sqlite3, urllib, json). Keep this empty.
dependencies = []

[tool.setuptools.packages.find]
include = ["beacon*"]
